<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Dicoding Submission</string>
    <string name="txt_todo">TODO</string>
    <string name="txt_slogan">See The Beauty In Everyday Things</string>
    <string name="txt_judul">Judul Scarlett</string>
    <string name="txt_harga">Harga Scarleet</string>
    <string name="txt_desc">Scarlett Whitening Body Scrub Pomegrante dibuat khusus dengan buliran scrub yang sangat halus dan tetap bisa membantu mengangkat kotoran atau sel-sel kulit mati di kulit tubuh secara lebih maksimal tanpa rasa takut kulit akan terjadinya iritasi!</string>
    <string name="txt_name">Tiyas Aria</string>
    <string name="txt_alamat_email">tiyasaria123@gmail.com</string>
    <string-array name="data_name">
        <item>Brightening Fragrance Body Lotion – Charming</item>
        <item>Body Scrub – Romansa</item>
        <item>Acne Cream Day</item>
        <item>Acne Cream Night</item>
        <item>Brightening Facial Wash – All Skin Type</item>
        <item>Brightly Ever After Cream Day</item>
        <item>Brightly Ever After Cream Night</item>
        <item>Serum – Acne</item>
        <item>Serum – Brightly Ever After</item>
        <item>Yordanian Sea Salt – Shampoo</item>
    </string-array>
    <string-array name="data_price">
        <item>Rp75.000</item>
        <item>Rp75.000</item>
        <item>Rp75.000</item>
        <item>Rp75.000</item>
        <item>Rp75.000</item>
        <item>Rp75.000</item>
        <item>Rp75.000</item>
        <item>Rp75.000</item>
        <item>Rp75.000</item>
        <item>Rp75.000</item>
    </string-array>
    <string-array name="data_description">
        <item>Karena terdapat kandungan Glutathione (Mother of Antioxidant) dan Vitamin E yang sangat bagus dan efektif untuk membantu merawat kulit tubuh di dalam Scarlett Whitening Body Lotion Charming, maka penggunaan secara rutin dapat membantu menutrisi, melembabkan serta mencerahkan kulit tubuh secara lebih maksimal.</item>
        <item>Scarlett Whitening Body Scrub Romansa dibuat khusus dengan buliran scrub yang sangat halus dan tetap bisa membantu mengangkat kotoran atau sel-sel kulit mati di kulit tubuh secara lebih maksimal tanpa rasa takut kulit akan terjadinya iritasi! Dengan menggunakan Scarlett Whitening Body Scrub Romansa minimal 2x dalam 1 minggu dapat membantu memaksimalkan proses regenarasi kulit karena terdapat kandungan Glutathione (Mother of Antioxidant), Vitamin E dan buliran scrub halus yang bagus untuk meregenerasi, melembabkan serta mencerahkan kulit tubuh secara lebih maksimal.</item>
        <item>Didalam Acne Day Cream terdapat kandungan Double Action Salicylic Acid, Natural Squalane, Hexapeptide-8, Natural Vit-C, Triceramide dan Aqua Peptide Glow yang dimana bermanfaat sebagai :
            1. Membantu bekerja paling baik untuk meredakan peradangan jerawat serta kemerahan pada kulit wajah.

2. Membantu meningkatkan kelembapan sehingga kulit tampak lebih sehat dan cerah.

3. Membantu menghilangkan garis halus juga mengencangkan kulit wajah.

4. Membantu memperbaiki tekstur pada kulit wajah.

5. Membantu memudarkan bekas-bekas jerawat pada kulit wajah.

6. Membantu memberi nutrisi pada kulit wajah.

7. Sebagai antioksidan dan melindungi sel kulit dari kerusakan radikal bebas yang disebabkan oleh paparan sinar UV.

Cara Pakai : Gunakan Acne Day Cream secara rutin saat pagi hari sesudah membersihkan kulit wajah. Diamkan beberapa saat hingga Acne Day Cream meresap ke kulit.</item>
        <item>Didalam Acne Night Cream terdapat kandungan CM Acnatu, Natural Squalane, Hexapeptide-8, Triceramide, Poreaway, Natural Vit-C dan Aqua Peptide Glow yang dimana bermanfaat sebagai :

1. Membantu sebagai anti bakteri dan anti inflamasi alami yang dapat membantu melawan bakteri penyebab jerawat.

2. Membantu mengurangi kemerahan dan bengkak.

3. Membantu menghilangkan garis halus juga mengencangkan kulit wajah.

4. Membantu memperbaiki tekstur bekas jerawat pada kulit wajah.

5. Membantu mengecilkan pori-pori pada kulit wajah.

6. Membantu memudarkan bekas-bekas jerawat pada kulit wajah.
Cara Pakai : Gunakan Acne Night Cream secara rutin saat malam hari sesudah membersihkan kulit wajah. Diamkan beberapa saat hingga Acne Night Cream meresap ke kulit.</item>
        <item>Di dalam Scarlett Whitening Facial Wash terdapat kandungan Glutathione, Vitamin E, Rose Petals dan Aloe Vera yang sangat bagus untuk :

1. Membantu mencerahkan wajah.

2. Membantu menutrisi serta mengecilkan pori-pori di wajah.

3. Membantu mengontrol kadar minyak berlebih di wajah.

4. Membantu menghilangkan beruntus/jerawat di wajah.

5. Membantu meregenerasi kulit wajah agar tampak lebih fresh.</item>
        <item>Didalam Brightly Ever After Day Cream terdapat kandungan Glutathione, Rainbow Algae, Hexapeptide-8, Rosehip Oil, Poreaway, Triceramide dan Aqua Peptide Glow yang dimana bermanfaat sebagai :

1. Membantu meningkatkan kelembapan serta elastisitas kulit wajah.

2. Membantu mencerahkan kulit wajah secara merata.

3. Membantu memudarkan bekas-bekas jerawat pada kulit wajah.

4. Membantu meingkatkan hidrasi kulit, menutrisi kulit juga membuat kulit menjadi lebih glowing.

5. Membantu menghilangkan garis halus juga mengencangkan kulit wajah.

6. Membantu meingkatkan hidrasi kulit, menutrisi kulit juga membuat kulit menjadi lebih glowing. 7

. Sebagai antioksidan dan melindungi sel kulit dari kerusakan radikal bebas yang disebabkan oleh paparan sinar UV.

Cara Pakai : Gunakan Brightly Ever After Day Cream secara rutin saat pagi hari sesudah membersihkan kulit wajah. Diamkan beberapa saat hingga Brightly Ever After Day Cream meresap ke kulit.</item>
        <item>Didalam Brightly Ever After Night Cream terdapat kandungan Glutathione, Niacinamide, Natural Vit-C, Hexapeptide-8, Poreaway, Green Caviar dan Aqua Peptide Glow yang dimana bermanfaat sebagai :

1. Membantu meningkatkan kelembapan serta elastisitas kulit wajah.

2. Membantu mencerahkan kulit wajah secara merata.

3. Membantu memudarkan bekas-bekas jerawat pada kulit wajah.

4. Membantu mengecilkan pori-pori pada kulit wajah.

5. Membantu menghilangkan garis halus juga mengencangkan kulit wajah.

6. Membantu meingkatkan hidrasi kulit, menutrisi kulit juga membuat kulit menjadi lebih glowing.

7. Sebagai antioksidan dan melindungi sel kulit dari kerusakan radikal bebas yang disebabkan oleh paparan sinar UV.

Cara Pakai : Gunakan Brightly Ever After Night Cream secara rutin saat malam hari sesudah membersihkan kulit wajah. Diamkan beberapa saat hingga Brightly Ever Night After Cream meresap ke kulit.</item>

        <item>Di dalam Acne Serum terdapat kandungan Tea Tree Leaf Water, Salicylic Acid, Jeju Centella Asiatica, Liquorice Extract dan Vitamin C yang dimana bermanfaat sebagai :

1. Membantu menyembuhkan jerawat meradang, jerawat batu, kulit kemerahan dan iritasi.

2. Membantu meregenerasi dan menjaga kulit yang sensitive tanpa menimbulkan iritasi.

3. Membantu menenangkan kulit, menghaluskan dan juga membantu memudarkan bekas jerawat atau luka.

4. Membantu mencerahkan kulit secara aman karena menggunakan Liquorice Extract dan Vitamin C yang juga berfungsi sebagai anti oxidant + anti pollution.

5. Membantu mengontrol kadar minyak berlebih di kulit.

Cara Pakai : Teteskan 2-3 tetes serum, usap dan pijat secara perlahan sampai merata pada kulit wajah. Diamkan beberapa saat agar serum meresap ke kulit.</item>
        <item>Di dalam Brightly Ever After Serum terdapat kandungan Phyto Whitening, Glutathione, Vitamin C, Niacinamide dan Lavender Water yang dimana bermanfaat sebagai :

1. Membantu mencerahkan kulit dan memudarkan noda di wajah seperti hiperpigmentasi, bekas jerawat, flek dan bekas luka.

2. Membantu mengontrol kadar minyak berlebih di kulit, membantu mengeceilkan pori-pori, mengimprovisasi warna kulit, menghaluskan kerutan dan juga garis di kulit.

3. Membantu menutrisi dan melembabkan kulit.

4. Membantu membuat kulit menjadi lebih relax dan calm.

5. Bekerja sebagai antioxidant dan juga sebagai anti pollution.

Cara Pakai : Teteskan 2-3 tetes serum, usap dan pijat secara perlahan sampai merata pada kulit wajah. Diamkan beberapa saat agar serum meresap ke kulit.</item>
        <item>Rasakan sensasi keharuman cuci rambut dirumah tapi terasa cuci rambut di salon! Manfaat Yordanian Sea Salt Shampoo :

– Membantu mengurangi kadar minyak berlebih di kulit kepala.

– Membantu mengurangi kulit kepala atau ketombe.

– Membantu menstimulasi pertumbuhan rambut.

– Membantu memperkuat folikel rambut.

– Membantu membuat rambut jadi lebih bervolume.

Dapatkan perawatan rambut yang lebih maksimal dengan menggunakan secara bersamaan Yordanian Sea Salt Shampoo dan Conditioner setiap mencuci rambut.</item>
    </string-array>
</resources>