<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fb_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20dp"
        android:layout_marginStart="@dimen/_20dp"
        android:clickable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_back_ios_new_24"
        android:contentDescription="@string/txt_todo"
        android:focusable="true" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fb_share"
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/_20dp"
        android:layout_marginEnd="@dimen/_20dp"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_share_24"
        android:contentDescription="@string/txt_todo"
        android:focusable="true" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cdv_img_detail"
        app:cardCornerRadius="@dimen/_20dp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_200dp"
        android:layout_marginTop="@dimen/_20dp"
        android:layout_marginStart="@dimen/_20dp"
        android:layout_marginEnd="@dimen/_20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fb_back" >
        <ImageView
            android:id="@+id/img_detail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/header_scarlett"
            android:contentDescription="@string/txt_todo" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_judul_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16dp"
        android:text="@string/txt_judul"
        android:textSize="@dimen/_20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/cdv_img_detail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/cdv_img_detail"
        app:layout_constraintTop_toBottomOf="@+id/cdv_img_detail" />

    <TextView
        android:id="@+id/tv_price_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8dp"
        android:text="@string/txt_harga"
        android:textSize="@dimen/_16sp"
        app:layout_constraintStart_toStartOf="@id/tv_judul_detail"
        app:layout_constraintTop_toBottomOf="@id/tv_judul_detail" />

    <TextView
        android:id="@+id/tv_desc_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginEnd="@dimen/_16dp"
        android:text="@string/txt_desc"
        android:textSize="@dimen/_16sp"
        app:layout_constraintStart_toStartOf="@id/tv_price_detail"
        app:layout_constraintTop_toBottomOf="@id/tv_price_detail" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView >